--- a/src/assets/styles/product.css
+++ b/src/assets/styles/product.css
@@ -1,38 +1,56 @@
 .product {
-  margin: 30px;
+  margin: 5px;
+  overflow: hidden;
+  position: relative;
+  display: inline-block;
   width: 70%;
+  max-width: 270px;
   padding: 10px;
   padding-bottom: 0;
   justify-content: center;
-  box-shadow: 0 4px 4px rgb(0 0 0 / 20%);
+  border: solid 1px var(--primary-green);
+  border-radius: 5px;
+  margin-left: 50px;
+  margin-right: 20px;
 }
 
 .product__container-img {
   display: flex;
   justify-content: center;
   width: 100%;
+  height: 180px;
   border-bottom: 2px solid #e3e3e3;
 }
 
 .product__container-img-product {
-  width: 100%;
+  width: 90%;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .product__container-img-product img {
-  width: 80%;
+  width: 65%;
+  object-fit: contain;
+  max-height: 180px;
 }
 
 .product__container-img-stamp {
-  position: absolute;
-  float: right;
-  margin-top: 20px;
-  margin-left: 56%;
+  width: 10%;
+  margin-right: -10%;
+  text-align: center;
+  margin-top: 5%;
+}
+
+.product__details {
+  height: 90px;
 }
 
 .product__title {
   margin-top: 10px;
+  white-space: normal;
+  height: 45px;
+  font-size: 1.3rem;
 }
 
 .product__amount {
@@ -51,14 +69,21 @@
 .product:hover  .botton-add-car {
   display: block;
   transition: 0.5s;
+  visibility: visible;
 }
 
 .botton-add-car {
-  display: none;
+  visibility: hidden;
   background: var(--primary-green);
   width: calc(100% + 20px);
   height: 40px;
   margin-left: -10px;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+.botton-add-car:active {
+  background: green;
 }
 
 .botton-add-car p {
@@ -69,4 +94,14 @@
   font-size: 1rem;
   font-weight: bold;
   height: 100%;
+}
+
+@media only screen and (min-width: 768px) {
+  .product__title {
+    font-size: 1.6rem;
+  }
+  .botton-add-car p {
+    font-size: 1.5rem;
+  }
+  
 }
