--- a/src/assets/styles/stamp.css
+++ b/src/assets/styles/stamp.css
@@ -2,17 +2,21 @@
   margin-top: 10px;
 }
 
+.stamp-image-tooltip img {
+  width: 90%;
+  margin-left: -150%;
+}
+
 .stamp-image-tooltip-text {
   display: none;
-  width: 89px;
+  width: 90px;
   background-color: #ede8e8;
   color: #ce0e0e;
-  text-align: left;
   border-radius: 5px 5px 5px 5px;
   padding: 5px;
   position: absolute;
-  margin-left: 35px;
-  z-index: 1;
+  margin-top: -25px;
+  margin-left: -113px;
   box-shadow: 0 4px 4px rgb(0 0 0 / 20%);
 }
 
