--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -8,7 +8,10 @@
  box-sizing: border-box;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
 html {
+  
   font-size: 62.5%;
-  font-family: Silka-Regular;
+  font-family: 'Open Sans', sans-serif;
 }
